fix check-box tick to fit and correctly align in its container box (#3585)
* fix(ui): check box, fix check-box tick to fit and correctly align in its container box


* fix(ui): check box, fix check-box tick to fit and correctly align in its container box


* fix(ui): check box,fix check-box tick to fit and correctly align in its container box


* fix(ui): check box,fix check-box tick to fit and correctly align in its container box


* fix(ui): check box,fix check-box tick to fit and correctly align in its container box


* fix(ui): check box,fix check-box tick to fit and correctly align in its container box


* fix(ui): check box, fix check-box tick to fit and correctly align in its container box

* fix check-box tick to fit and correctly align in its container box

---------

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -273,7 +273,6 @@
 //checkpoints
 .primary-checkpoint {
   background-color: $shadow-grey;
-  bottom: 0;
   display: inline-block;
   height: 25px;
   margin-top: 15px;
@@ -314,11 +313,11 @@
       border: solid $white;
       border-width: 0 3px 3px 0;
       display: block;
-      height: 12px;
-      left: 9px;
-      top: 5px;
+      height: 14px;
+      left: 7px;
+      top: 2px;
       transform: rotate(45deg);
-      width: 8px;
+      width: 9px;
     }
   }
 }
